--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-std = "1.12.0"
 futures = "0.3.26"
 futures-timer = "3.0.2"
 futures-util = "0.3.26"
